# sound-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  download_data.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data_loading/: data_loading.yaml  preprocessing_lh.yaml  preprocessing_x.yaml
configs/logging/: logging.yaml
configs/model/: model.yaml
configs/training/: training_lh.yaml  training_x.yaml
data/: FSDKaggle2018.audio_test.dvc  FSDKaggle2018.audio_train.dvc  FSDKaggle2018.meta.dvc
models/: epoch=14-val_loss=0.8405.ckpt.dvc  epoch=14-val_loss=1.0761.ckpt.dvc
plots/: link_to_plots.md
sound_recognition/: ensamble.py  train.py
sound_recognition/pl_modules/: datamodule.py  model.py  preprocessing.py  utils.py
